@@ -1,47 +1,51 @@
-<h1 tal:replace="structure here/manage_page_header" >PAGE HEADER</h1>
+<h1 tal:replace="structure context/manage_page_header">PAGE HEADER</h1>
+<h2 tal:define="form_title string:Add Configured CMF Site"
+    tal:replace="structure context/manage_form_title">FORM TITLE</h2>
 
-<p class="form-help">
-Please select a setup profile (path) for this site
-</p>
+<p class="form-help">Please select ID and configuration for the new site.</p>
 
 <form action="addConfiguredSite" method="post">
 <table cellspacing="0" cellpadding="2" border="0">
-  <tr>
-    <td align="left" valign="top">
-    <div class="form-label">
-    Site Id
-    </div>
-    </td>
-    <td align="left" valign="top">
-    <input type="text" name="site_id" />
-    </td>
-  </tr>
-  <tr>
-    <td align="left" valign="top">
-    <div class="form-label">
-    Setup profile
-    </div>
-    </td>
-    <td align="left" valign="top">
+ <tr valign="top">
+  <td>
+   <div class="form-label">Site ID</div>
+  </td>
+  <td>
+   <input type="text" name="site_id" />
+  </td>
+ </tr>
+ <tr valign="top">
+  <td>
+   <div class="form-label">Setup profile</div>
+  </td>
+  <td>
     <select name="profile_id">
       <option value="PROFILE_ID"
-              tal:repeat="info options/profiles"
+              tal:repeat="info options/base_profiles"
               tal:attributes="value info/id"
               tal:content="info/title">PROFILE TITLE</option>
     </select>
-    </td>
-  </tr>
-  <tr>
-    <td align="left" valign="top">
-    </td>
-    <td align="left" valign="top">
-    <div class="form-element">
-    <input class="form-element" type="submit" name="submit" 
-     value=" Add " /> 
-    </div>
-    </td>
-  </tr>
+  </td>
+ </tr>
+ <tr valign="top">
+  <td>
+   <div class="form-label">Optional extensions</div>
+  </td>
+  <td><tal:span tal:repeat="info options/extension_profiles">
+   <input type="checkbox" name="extension_ids:list" value="PROFILE_ID"
+          tal:attributes="value info/id" />
+   <tal:span tal:content="info/title">PROFILE TITLE</tal:span><br /></tal:span>
+  </td>
+ </tr>
+ <tr>
+  <td>
+   &nbsp;
+  </td>
+  <td>
+   <input class="form-element" type="submit" name="submit" value="Add" /> 
+  </td>
+ </tr>
 </table>
 </form>
-<h1 tal:replace="structure here/manage_page_footer" >PAGE FOOTER</h1>
 
+<h1 tal:replace="structure context/manage_page_footer">PAGE FOOTER</h1>
